# brisk_openapi.yaml
@@ -68,7 +68,7 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/CreateLinkResponse'
                 '400':
-                    description: Malformated request or the TTL is too high
+                    description: Malformated request, the TTL is too high or the slug length is invalid (max 20)
                 '401':
                     description: Wrong credentials
         delete:
@@ -116,6 +116,7 @@ components:
             required:
                 - url
                 - ttl
+                - slug_length
             properties:
                 url:
                     type: string
@@ -123,6 +124,9 @@ components:
                 ttl:
                     type: integer
                     example: 900000
+                slug_length:
+                    type: integer
+                    example: 6
         CreateLinkResponse:
             type: object
             properties:
